--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="complete">Complete</string>
     <string name="GOOGLE_MAPS_API_KEY">AIzaSyBYYr7Zr7g2r-wra9xtoozADTznningCjM</string>
     <string name="title_activity_location_action">Map</string>
+    <string name="location">Location</string>
 </resources>
