--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,38 @@
     <string name="GOOGLE_MAPS_API_KEY">AIzaSyBYYr7Zr7g2r-wra9xtoozADTznningCjM</string>
     <string name="title_activity_location_action">Map</string>
     <string name="location">Location</string>
+    <string name="boyid">Boyid</string>
+    <string name="itemname">ItemName</string>
+    <string name="pickup">PickupLocation</string>
+    <string name="drop">DropLocation</string>
+    <string name="sucsses">Login Sucssesfull as manager</string>
+    <string name="invalid">Please Enter Valid Credential</string>
+    <string name="dloginsu">Login Sucssesfull as Delivery Boy</string>
+    <string name="managerda">dalejan</string>
+    <string name="manager">manager</string>
+    <string name="who">who</string>
+    <string name="plsenterpass">Please Enter Password</string>
+    <string name="plsenteremail">Please Enter Email</string>
+    <string name="car">Car</string>
+    <string name="bus">Bus</string>
+    <string name="hat">Hat</string>
+    <string name="bag">Bag</string>
+    <string name="bat">Bat</string>
+    <string name="shoe">Shoe</string>
+    <string name="laptop">Laptop</string>
+    <string name="bench">Bench</string>
+    <string name="fan">Fan</string>
+    <string name="ac">Ac</string>
+    <string name="earphone">Earphone</string>
+    <string name="guitar">Guitar</string>
+    <string name="soap">Soap</string>
+    <string name="shampoo">Shampoo</string>
+    <string name="bottle">Bottle</string>
+    <string name="longitude">Longitude:</string>
+    <string name="latitude">Latitude:</string>
+    <string name="notavail">notAvailable</string>
+    <string name="chooseboyid">Choose boy id for delivery</string>
+    <string name="fillall">Fill all the Details</string>
+    <string name="left">left</string>
+
 </resources>
